# quickcall-mcp-elicitation

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
frontend/: Dockerfile
frontend/public/: site.webmanifest
frontend/src/app/: globals.css  layout.tsx  page.tsx
mcp-server/: Dockerfile  main.py  pyproject.toml
