[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.127.1",
    "fastmcp>=2.13.0",
    "httpx>=0.28.1",
    "mcp>=1.25.0",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sse-starlette>=3.1.1",
    "uvicorn>=0.40.0",
]
